# smokeparrot

./: .gitignore  README  README.rst  initialize.sh  settings
cgi-bin/: smokeparrot  smokeparrot.cgi
demo/: index.html
demo/css/: custom.css
doc/meetinglogs/: xcomp_meeting_2011.05.09.txt
lib/: CollectMessages.sh  CreateMessage.sh  DeleteHiddenMessages.sh  GetAddress.sh  GetNeighbours.sh  GetRemoteMessages.sh  HideMessageToggle.sh  KeepSharedMessages.sh  ProcessReceivedMessages.sh  ShareMessageToggle.sh  StarMessageToggle.sh  TransferMessages.sh  dbclient-noask.sh  env.sh
media/css/: custom.css
media/images/: circles_base.xcf  loop_arrow_base.xcf
media/img/openclipart/: copyright
messages/: 1297186000-53f69da2e467ead1961ab2e691e7dc64.txt  1308000000-c539e03be7b269c8a84f85437bc8d298.txt  1309008000-81ffcd3c5384452c76c970b85cac805c.txt  1309070000-4a58db979d107ca6300f1be1406b3605.txt
smokeparrot-daemon/: AUTHORS  INSTALL  Makefile  Makefile.am  README  THANKS  configure.ac  doxygen.cfg
smokeparrot-daemon/doc/src/: smokeparrot.dox
smokeparrot-daemon/po/: Makevars  POTFILES.in
smokeparrot-daemon/src/: SP_http_response.c  SP_http_response.h  SP_message.h  main.c  smokeparrot.c  sp_common.h  sp_daemon.c  sp_daemon.h  sp_initialize.c  sp_initialize.h  sp_logging.c  sp_logging.h  sp_signals.c  sp_signals.h
smokeparrot/src/: SP_http_response.c  SP_http_response.h  SP_message.h  smokeparrot.c
src/: SMessage.h  SMessageQueue.c  SMessageQueue.h  SMessageStore.c  SMessageStore.h  SNode.h  filesystem.c  filesystem.h  hash.c  interface.c  interface.h
(+37 files in other folders)
